Work on CrossPlateform
Former-commit-id: d35ed493dd15d360fcb24612287ee1d93b8f2a66

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ CMakeCache.txt
 cmake-build-release-msvc/
 
 cmake-build-debug-msvc/
+
+bomberman
+
+cmake-build-debug-mvcs/
+
+cmake-build-release-mvcs/
