--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ find_package(Irrlicht REQUIRED)
 target_link_libraries(bomberman ${IRRLICHT_LIBRARY})
 target_include_directories(bomberman PRIVATE ${IRRLICHT_INCLUDE_DIR})
 
+if(WIN32)
 add_custom_command(TARGET bomberman PRE_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
         ../libs/irrlicht/bin/Win64-VisualStudio/Irrlicht.dll
         ../bin/Irrlicht.dll)
+endif()
