Fixed compile issue on Windows
Former-commit-id: fa3d3d619c2de0906d4d9258ed7d7cf6da12379a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,6 @@ target_include_directories(bomberman PRIVATE ${IRRLICHT_INCLUDE_DIR})
 if(WIN32)
 add_custom_command(TARGET bomberman PRE_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
-        ../libs/irrlicht/bin/Win64-VisualStudio/Irrlicht.dll
-        ../bin/Irrlicht.dll)
+        ${PROJECT_SOURCE_DIR}/libs/irrlicht/bin/Win32-VisualStudio/Irrlicht.dll
+        ${PROJECT_SOURCE_DIR}/bin/Irrlicht.dll)
 endif()
