Add check arch for copying DLL
Former-commit-id: 6874dae30bd03e60d5e5b297aacf7a7c9f19deb5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,17 @@ target_link_libraries(bomberman ${IRRLICHT_LIBRARY})
 target_include_directories(bomberman PRIVATE ${IRRLICHT_INCLUDE_DIR})
 
 if(WIN32)
-add_custom_command(TARGET bomberman PRE_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy
-        ${PROJECT_SOURCE_DIR}/libs/irrlicht/bin/Win32-VisualStudio/Irrlicht.dll
-        ${PROJECT_SOURCE_DIR}/bin/Irrlicht.dll)
+    if (CMAKE_CL_64)
+        message("Copy dll > 64")
+        add_custom_command(TARGET bomberman PRE_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy
+                ${PROJECT_SOURCE_DIR}/libs/irrlicht/bin/Win64-VisualStudio/Irrlicht.dll
+                ${PROJECT_SOURCE_DIR}/bin/Irrlicht.dll)
+    else ()
+        message("Copy dll > 32")
+        add_custom_command(TARGET bomberman PRE_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy
+                ${PROJECT_SOURCE_DIR}/libs/irrlicht/bin/Win32-VisualStudio/Irrlicht.dll
+                ${PROJECT_SOURCE_DIR}/bin/Irrlicht.dll)
+    endif ()
 endif()
