--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,13 @@
-
-\.idea/
-build
 bin
+build
 cmake-build-debug/
 CMakeFiles
 CMakeCache.txt
-
 cmake-build-release-msvc/
-
 cmake-build-debug-msvc/
+\.vs/
+\.idea/
+libs/
 
 bomberman
 
-cmake-build-debug-mvcs/
-
-cmake-build-release-mvcs/
