Add files from UML
Former-commit-id: 0f4d3551f97208982925c517bb595af8c0172f06

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,10 @@ set(CMAKE_CXX_STANDARD 11)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
 add_executable(bomberman
-        src/main.cpp)
+        src/main.cpp
+        src/classes/Core.cpp inc/classes/Core.hpp src/classes/Options.cpp inc/classes/Options.hpp src/classes/Keymap.cpp inc/classes/Keymap.hpp inc/interface/ICaracter.hpp inc/interface/IMap.hpp inc/interface/IObject.hpp inc/interface/INpc.hpp src/abstract/AMenu.cpp inc/abstract/AMenu.hpp src/abstract/AGame.cpp inc/abstract/AGame.hpp src/abstract/AComputer.cpp inc/abstract/AComputer.hpp src/abstract/AMonster.cpp inc/abstract/AMonster.hpp src/abstract/AWall.cpp inc/abstract/AWall.hpp src/abstract/ABomb.cpp inc/abstract/ABomb.hpp src/abstract/ACollectible.cpp inc/abstract/ACollectible.hpp)
 
+include_directories(inc inc/interface)
 set(IRRLICHT_SOURCE_DIR ./libs/irrlicht)
 find_package(Irrlicht REQUIRED)
 target_link_libraries(bomberman ${IRRLICHT_LIBRARY})
