Push all Generate MAP
Former-commit-id: 8122b525ce829af204fbd639c73e8d5a2192abac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set(HEADER_FILES
         src/abstract/AWall.hpp
         src/classes/Camera.hpp
         src/classes/Device.hpp
+        src/classes/Map.cpp
         src/classes/JsonRead.hpp
         src/classes/MapWall.hpp
         src/classes/Debug.hpp
