Starting to move Camera to Scenes instead of Core
Former-commit-id: 0b8fa2d8e1a9af6d1fac0d3fc4c6019ed680a269

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,8 @@ cmake-build-release-mvcs/
 \.vs/
 \.idea/
 libs/
-
+.vscode
 bomberman
 cmake-build-debug-mcvs/
-
 cmake-build-release-mcvs/
-
 media/
