Add floor, Add Event Class (K to leave), Init Debug mode
Former-commit-id: 62aca8070a1d64260f117620db38fe85e54fd322

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ set(HEADER_FILES
         src/classes/Debug.hpp
         src/classes/Wall.hpp
         src/classes/SceneHandler.hpp
-        src/classes/Game.hpp src/classes/menu/MainMenu.cpp src/classes/menu/MainMenu.hpp)
+        src/classes/Game.hpp src/classes/menu/MainMenu.cpp src/classes/menu/MainMenu.hpp src/classes/Event.cpp src/classes/Event.hpp)
 
 add_executable(bomberman
         src/main.cpp
