Player implementation (basic features) : getPosition, movePlayer, animatePlayer
Former-commit-id: 84dab70e0794639531068dde67880a85edbe888a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ set(HEADER_FILES
         src/classes/Debug.hpp
         src/classes/Wall.hpp
         src/classes/SceneHandler.hpp
+        src/classes/Player.hpp
         src/classes/Game.hpp src/classes/menu/MainMenu.cpp src/classes/menu/MainMenu.hpp src/classes/Event.cpp src/classes/Event.hpp)
 
 add_executable(bomberman
@@ -56,6 +57,7 @@ add_executable(bomberman
         src/classes/Wall.cpp
         src/classes/SceneHandler.cpp
         src/classes/Floor.cpp
+        src/classes/Player.cpp
         ${HEADER_FILES})
 
 set(IRRLICHT_SOURCE_DIR ./libs/irrlicht)
