added the missing abstract classes in the CMakeLists.txt file. Also fixed the multi scene at the same time ... Don't comment lines on the SceneHandler that check to clean the scene... THERE LINES ARE IMPORTANT !!! Also Fixed the Menu which were completely broken after a bad merge or any event like that .. Try to pull sometimes and check what you are doing with your merges guys.
Former-commit-id: 684d8d5d634ad0707480348c8256cf805b9f12fa

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,8 +56,12 @@ add_executable(bomberman
         src/classes/Debug.cpp
         src/classes/Wall.cpp
         src/classes/SceneHandler.cpp
+        src/abstracts/AMenu.cpp
         src/classes/Floor.cpp
         src/classes/Player.cpp
+        src/abstracts/ACharacter.cpp
+        src/abstracts/AGame.cpp
+        src/abstracts/AModel.cpp
         ${HEADER_FILES})
 
 set(IRRLICHT_SOURCE_DIR ./libs/irrlicht)
