--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,13 +27,14 @@ set(HEADER_FILES
         src/abstracts/APlayer.hpp
         src/classes/Camera.hpp
         src/classes/Device.hpp
-        src/classes/Map.cpp
         src/classes/JsonRead.hpp
         src/classes/MapWall.hpp
         src/classes/Debug.hpp
         src/classes/Wall.hpp
         src/classes/SceneHandler.hpp
-        src/classes/Game.hpp src/classes/menu/MainMenu.cpp src/classes/menu/MainMenu.hpp src/classes/Event.cpp src/classes/Event.hpp)
+        src/classes/Game.hpp
+        src/classes/menu/MainMenu.hpp
+        src/classes/Event.hpp)
 
 add_executable(bomberman
         src/main.cpp
@@ -58,6 +59,9 @@ add_executable(bomberman
         src/classes/Wall.cpp
         src/classes/SceneHandler.cpp
         src/classes/Floor.cpp
+        src/classes/Map.cpp
+        src/classes/menu/MainMenu.cpp
+        src/classes/Event.cpp
         ${HEADER_FILES})
 
 set(IRRLICHT_SOURCE_DIR ./libs/irrlicht)
