Added the "credits" menu in the main menu. With a return button.
Former-commit-id: e967919aec91fd3837dfe69c37784a99dc62bd11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ set(HEADER_FILES
         src/classes/Wall.hpp
         src/classes/SceneHandler.hpp
         src/classes/Player.hpp
-        src/classes/Game.hpp src/classes/menu/MainMenu.cpp src/classes/menu/MainMenu.hpp src/classes/Event.cpp src/classes/Event.hpp src/classes/menu/SettingsMenu.cpp src/classes/menu/SettingsMenu.cpp src/classes/menu/SettingsMenu.hpp)
+        src/classes/Game.hpp src/classes/menu/MainMenu.cpp src/classes/menu/MainMenu.hpp src/classes/Event.cpp src/classes/Event.hpp src/classes/menu/SettingsMenu.cpp src/classes/menu/SettingsMenu.cpp src/classes/menu/SettingsMenu.hpp src/classes/menu/CreditsMenu.cpp src/classes/menu/CreditsMenu.hpp)
 
 add_executable(bomberman
         src/main.cpp
