Add Types.hpp to CMakeList.txt
Former-commit-id: d43513f0b0cdafb607d5d790e6ee0830a857dc2a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ set(HEADER_FILES
         src/classes/menu/SettingsMenu.cpp
         src/classes/menu/SettingsMenu.hpp
         src/classes/menu/CreditsMenu.cpp
+        src/Types.hpp
         src/classes/menu/CreditsMenu.hpp)
 
 add_executable(bomberman
