--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ set(HEADER_FILES
         src/classes/menu/CreditsMenu.hpp
         src/classes/menu/PlayMenu.hpp
         src/classes/Booster.hpp
-        )
+        src/classes/SoundDevice.cpp src/classes/SoundDevice.hpp)
 
 add_executable(bomberman
         src/main.cpp
@@ -97,16 +97,43 @@ else()
     message("J'ai PAS trouve BOOST")
 endif()
 
+set(IRRKLANG_DIR ./libs/irrklang)
+if(UNIX)
+    set(IRRKLANG_LIBRARY ${PROJECT_SOURCE_DIR}/libs/irrklang/bin/Linux64/libIrrKlang.so)
+    add_custom_command(TARGET bomberman PRE_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy
+            ${PROJECT_SOURCE_DIR}/libs/irrklang/bin/Linux64/ikpMP3.so
+            ${PROJECT_SOURCE_DIR}/bin/ikpMP3.so)
+endif(UNIX)
 if(WIN32)
     if (CMAKE_CL_64)
         add_custom_command(TARGET bomberman PRE_BUILD
                 COMMAND ${CMAKE_COMMAND} -E copy
                 ${PROJECT_SOURCE_DIR}/libs/irrlicht/bin/Win64-VisualStudio/Irrlicht.dll
                 ${PROJECT_SOURCE_DIR}/bin/Irrlicht.dll)
+        add_custom_command(TARGET bomberman PRE_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy
+                ${PROJECT_SOURCE_DIR}/libs/irrklang/bin/Winx64/irrKlang.dll
+                ${PROJECT_SOURCE_DIR}/bin/irrKlang.dll)
+        add_custom_command(TARGET bomberman PRE_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy
+                ${PROJECT_SOURCE_DIR}/libs/irrklang/bin/Winx64/ikpMP3.dll
+                ${PROJECT_SOURCE_DIR}/bin/ikpMP3.dll)
     else ()
         add_custom_command(TARGET bomberman PRE_BUILD
                 COMMAND ${CMAKE_COMMAND} -E copy
                 ${PROJECT_SOURCE_DIR}/libs/irrlicht/bin/Win32-VisualStudio/Irrlicht.dll
                 ${PROJECT_SOURCE_DIR}/bin/Irrlicht.dll)
+        add_custom_command(TARGET bomberman PRE_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy
+                ${PROJECT_SOURCE_DIR}/libs/irrklang/bin/Winx32/irrKlang.dll
+                ${PROJECT_SOURCE_DIR}/bin/irrKlang.dll)
+        add_custom_command(TARGET bomberman PRE_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy
+                ${PROJECT_SOURCE_DIR}/libs/irrklang/bin/Winx32/ikpMP3.dll
+                ${PROJECT_SOURCE_DIR}/bin/ikpMP3.dll)
     endif ()
 endif()
+
+target_link_libraries(bomberman ${IRRKLANG_LIBRARY})
+target_include_directories(bomberman PRIVATE ${IRRKLANG_DIR}/include)
