push bomb model.
Former-commit-id: 098a69bcd1df2b39558276ee815962e477934aac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ set(HEADER_FILES
         src/classes/menu/CreditsMenu.hpp
         src/classes/menu/PlayMenu.hpp
         src/classes/Booster.hpp
-        src/classes/SoundDevice.cpp src/classes/SoundDevice.hpp)
+        src/classes/SoundDevice.cpp src/classes/SoundDevice.hpp src/classes/menu/GameMenu.cpp src/classes/menu/GameMenu.hpp)
 
 add_executable(bomberman
         src/main.cpp
