Fix Irrklang on Windows
Former-commit-id: 68f67f22ad8b7ef89453a9ef95f0a6f6ed7f36c8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,6 +124,7 @@ if(WIN32)
                 COMMAND ${CMAKE_COMMAND} -E copy
                 ${PROJECT_SOURCE_DIR}/libs/irrklang/bin/Winx64/ikpMP3.dll
                 ${PROJECT_SOURCE_DIR}/bin/ikpMP3.dll)
+        set(IRRKLANG_LIBRARY ${PROJECT_SOURCE_DIR}/libs/irrklang/lib/Winx64-visualStudio/irrKlang.lib)
     else ()
         add_custom_command(TARGET bomberman PRE_BUILD
                 COMMAND ${CMAKE_COMMAND} -E copy
@@ -137,8 +138,11 @@ if(WIN32)
                 COMMAND ${CMAKE_COMMAND} -E copy
                 ${PROJECT_SOURCE_DIR}/libs/irrklang/bin/Winx32/ikpMP3.dll
                 ${PROJECT_SOURCE_DIR}/bin/ikpMP3.dll)
+        set(IRRKLANG_LIBRARY ${PROJECT_SOURCE_DIR}/libs/irrklang/lib/Winx32-visualStudio/irrKlang.lib)
     endif ()
 endif()
 
+
+message(${IRRKLANG_LIBRARY})
 target_link_libraries(bomberman ${IRRKLANG_LIBRARY})
 target_include_directories(bomberman PRIVATE ${IRRKLANG_DIR}/include)
