--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(bomberman)
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 set(CMAKE_CXX_STANDARD 17)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -g)
 
 include_directories(
         src/interfaces
@@ -15,71 +15,73 @@ include_directories(
 )
 
 set(HEADER_FILES
-        src/interfaces/IScene.hpp
+        src/abstracts/ACharacter.hpp
+        src/abstracts/ACollectible.hpp
+        src/abstracts/AMonster.hpp
+        src/abstracts/APlayer.hpp
+        src/abstracts/AScene.hpp
+        src/classes/Bomb.hpp
+        src/classes/Booster.hpp
+        src/classes/Camera.hpp
+        src/classes/Debug.hpp
+        src/classes/Device.hpp
+        src/classes/Event.hpp
+        src/classes/Game.hpp
+        src/classes/JsonRead.hpp
+        src/classes/Map.hpp
+        src/classes/MapWall.hpp
+        src/classes/menu/CreditsMenu.hpp
+        src/classes/menu/GameMenu.hpp
+        src/classes/menu/MainMenu.hpp
+        src/classes/menu/PlayMenu.hpp
+        src/classes/menu/SettingsMenu.hpp
+        src/classes/Player.hpp
+        src/classes/SceneHandler.hpp
+        src/classes/SoundDevice.hpp
+        src/classes/Wall.hpp
         src/interfaces/ICharacter.hpp
         src/interfaces/IMap.hpp
         src/interfaces/IObject.hpp
-        src/abstracts/ACollectible.hpp
-        src/abstracts/AScene.hpp
-        src/abstracts/AMonster.hpp
-        src/abstracts/APlayer.hpp
-        src/classes/Bomb.hpp
-        src/classes/Camera.hpp
-        src/classes/Device.hpp
-        src/classes/JsonRead.hpp
-        src/classes/MapWall.hpp
-        src/classes/Debug.hpp
-        src/classes/Wall.hpp
-        src/classes/SceneHandler.hpp
-        src/classes/Player.hpp
-        src/classes/Game.hpp
-        src/classes/menu/MainMenu.hpp
-        src/classes/Event.hpp
-        src/classes/Map.hpp
-        src/classes/menu/SettingsMenu.hpp
+        src/interfaces/IScene.hpp
         src/Types.hpp
-        src/classes/menu/CreditsMenu.hpp
-        src/classes/menu/PlayMenu.hpp
-        src/classes/Booster.hpp
-        src/classes/SoundDevice.hpp
-        src/classes/menu/GameMenu.hpp
         )
 
 add_executable(bomberman
-        src/main.cpp
-        src/classes/Core.cpp
-        src/classes/Options.cpp
-        src/classes/Keymap.cpp
-        src/classes/Camera.cpp
-        src/abstracts/AScene.cpp
-        src/classes/Bomb.cpp
-        src/classes/Flame.cpp
-        src/classes/Computer.cpp
-        src/abstracts/AObject.cpp
-        src/abstracts/AMovable.cpp
-        src/abstracts/AMonster.cpp
         src/abstracts/ACollectible.cpp
-        src/classes/Game.cpp
-        src/classes/Device.cpp
-        src/classes/Camera.cpp
-        src/classes/JsonRead.cpp
-        src/abstracts/APlayer.cpp
-        src/classes/Debug.cpp
-        src/classes/Wall.cpp
-        src/classes/SceneHandler.cpp
-        src/classes/Floor.cpp
-        src/classes/Map.cpp
-        src/classes/Player.cpp
         src/abstracts/AModel.cpp
-        src/classes/menu/PlayMenu.cpp
-        src/classes/Event.cpp
-        src/classes/menu/MainMenu.cpp
-        src/classes/menu/SettingsMenu.cpp
-        src/classes/menu/SettingsMenu.cpp
-        src/classes/menu/CreditsMenu.cpp
+        src/abstracts/AMonster.cpp
+        src/abstracts/AMovable.cpp
+        src/abstracts/AObject.cpp
+        src/abstracts/APlayer.cpp
+        src/abstracts/AScene.cpp
+        src/abstracts/ACharacter.cpp
+        src/classes/Bomb.cpp
         src/classes/Booster.cpp
-        src/classes/SoundDevice.cpp
+        src/classes/Camera.cpp
+        src/classes/Camera.cpp
+        src/classes/Computer.cpp
+        src/classes/Core.cpp
+        src/classes/Debug.cpp
+        src/classes/Device.cpp
+        src/classes/Event.cpp
+        src/classes/Flame.cpp
+        src/classes/Floor.cpp
+        src/classes/Game.cpp
+        src/classes/JsonRead.cpp
+        src/classes/Keymap.cpp
+        src/classes/Map.cpp
+        src/classes/menu/CreditsMenu.cpp
         src/classes/menu/GameMenu.cpp
+        src/classes/menu/MainMenu.cpp
+        src/classes/menu/PlayMenu.cpp
+        src/classes/menu/SettingsMenu.cpp
+        src/classes/menu/SettingsMenu.cpp
+        src/classes/Options.cpp
+        src/classes/Player.cpp
+        src/classes/SceneHandler.cpp
+        src/classes/SoundDevice.cpp
+        src/classes/Wall.cpp
+        src/main.cpp
         ${HEADER_FILES})
 
 set(IRRLICHT_SOURCE_DIR ./libs/irrlicht)
