Push the new menu, now you have a list of the maps in the ./maps dir.
Former-commit-id: 0bd3aa60ef1aff22024af9789baec842f954d243

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ set(HEADER_FILES
         src/interfaces/IObject.hpp
         src/interfaces/IScene.hpp
         src/Types.hpp
-        )
+        src/classes/menu/MapMenu.cpp src/classes/menu/MapMenu.hpp)
 
 add_executable(bomberman
         src/abstracts/ACollectible.cpp
