Push the begin of the new menu.
Signed-off-by: Maxime JENNY <maxime.jenny@epitech.eu>

Former-commit-id: abbd35d4953ed9cef0c0741c68c195600cde6edf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,9 @@ set(HEADER_FILES
         src/interfaces/IObject.hpp
         src/interfaces/IScene.hpp
         src/Types.hpp
-        src/classes/menu/MapMenu.cpp src/classes/menu/MapMenu.hpp)
+        src/classes/menu/EndGameMenu.cpp
+        src/classes/menu/EndGameMenu.hpp
+        src/classes/menu/MapMenu.cpp)
 
 add_executable(bomberman
         src/abstracts/ACollectible.cpp
