Now uses std::filesystem on both Linux and Windows Fixed warnings
Former-commit-id: 2f9f60b7dd4ac754c9c8dc9821f2762da5f976ea

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,7 @@ endif()
 
 set(IRRKLANG_DIR ./libs/irrklang)
 if(UNIX)
+    target_link_libraries(bomberman stdc++fs)
     set(IRRKLANG_LIBRARY ${PROJECT_SOURCE_DIR}/libs/irrklang/bin/Linux64/libIrrKlang.so)
     add_custom_command(TARGET bomberman PRE_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy
