--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-assets linguist-vendored=true
-cmake linguist-vendored=true
-libs linguist-vendored=true
+/assets linguist-vendored=true
+/cmake linguist-vendored=true
+/libs linguist-vendored=true
